deployment/kustomize/overlays/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: sivtsov.dacdevops.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  name: web
  tls:
    - hosts:
      - sivtsov.dacdevops.ru
      secretName: sivtsov-cert
